# 3b1b-hand

./: .gitignore  README.md  controller.py  data.dump  dump_vault.py  dump_vault.txt  guardrails.py  main.py  planner.py  pyproject.toml  secret.json  vault_manip.py
browser/: playwright_browser.py
schemas/: actions.py  plan.py  vault_schema_dummy.json
tests/: vault_test.py
vault/: config.py  core.py  manager.py
vlm/: prompt.py  qwen_client.py
